# agentguard

./: .gitignore  README.md  pyproject.toml
notebooks/: 01_no_egress_demo.py  02_sentry_egress_demo.py
src/agentguard/: __init__.py  allowlist.py  no_egress.py
tests/: test_allowlist.py  test_no_egress_blocks_socket.py
