[project]
name = "agentguard"
version = "0.1.0"
description = "Detect and block outbound network attempts in-process; deterministic CI gating for no uncontrolled egress."
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest>=7"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["agentguard*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
